# visualization.pictureit

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  appveyor.yml  azure-pipelines.yml  icon.xcf  mrfft.h
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright  rules
depends/PictureIt/: CMakeLists.txt  PictureItConfig.cmake.in  README.md
depends/PictureIt/include/pictureit/: pictureit.h  spectrum.h  utils.h
depends/PictureIt/include/pictureit/effects/: crossfade.h  effects.h
depends/PictureIt/src/: pictureit.cpp  spectrum.cpp  utils.cpp
depends/PictureIt/src/effects/: crossfade.cpp
depends/common/KissFFT/: KissFFT.txt
depends/common/PictureIt/: PictureIt.txt  deps.txt
depends/common/asplib/: asplib.txt  deps.txt  flags.txt
lib/: kodi-kissfft-note.txt
src/: mrfft.cpp  mrfft.h  pictureit.cpp  pictureit.h  pictureit_addon.cpp
visualization.pictureit/: addon.xml  addon.xml.in
visualization.pictureit/resources/: settings.xml
visualization.pictureit/resources/language/English/: strings.po
visualization.pictureit/resources/language/resource.language.af_za/: strings.po
visualization.pictureit/resources/language/resource.language.am_et/: strings.po
visualization.pictureit/resources/language/resource.language.ar_sa/: strings.po
visualization.pictureit/resources/language/resource.language.az_az/: strings.po
visualization.pictureit/resources/language/resource.language.be_by/: strings.po
visualization.pictureit/resources/language/resource.language.bg_bg/: strings.po
visualization.pictureit/resources/language/resource.language.bs_ba/: strings.po
visualization.pictureit/resources/language/resource.language.ca_es/: strings.po
visualization.pictureit/resources/language/resource.language.cs_cz/: strings.po
visualization.pictureit/resources/language/resource.language.cy_gb/: strings.po
visualization.pictureit/resources/language/resource.language.da_dk/: strings.po
visualization.pictureit/resources/language/resource.language.de_de/: strings.po
visualization.pictureit/resources/language/resource.language.el_gr/: strings.po
visualization.pictureit/resources/language/resource.language.en_au/: strings.po
visualization.pictureit/resources/language/resource.language.en_gb/: strings.po
visualization.pictureit/resources/language/resource.language.en_nz/: strings.po
visualization.pictureit/resources/language/resource.language.en_us/: strings.po
visualization.pictureit/resources/language/resource.language.eo/: strings.po
visualization.pictureit/resources/language/resource.language.es_ar/: strings.po
visualization.pictureit/resources/language/resource.language.es_es/: strings.po
visualization.pictureit/resources/language/resource.language.es_mx/: strings.po
visualization.pictureit/resources/language/resource.language.et_ee/: strings.po
visualization.pictureit/resources/language/resource.language.eu_es/: strings.po
visualization.pictureit/resources/language/resource.language.fa_af/: strings.po
visualization.pictureit/resources/language/resource.language.fa_ir/: strings.po
visualization.pictureit/resources/language/resource.language.fi_fi/: strings.po
visualization.pictureit/resources/language/resource.language.fo_fo/: strings.po
visualization.pictureit/resources/language/resource.language.fr_ca/: strings.po
visualization.pictureit/resources/language/resource.language.fr_fr/: strings.po
visualization.pictureit/resources/language/resource.language.gl_es/: strings.po
visualization.pictureit/resources/language/resource.language.he_il/: strings.po
visualization.pictureit/resources/language/resource.language.hi_in/: strings.po
visualization.pictureit/resources/language/resource.language.hr_hr/: strings.po
visualization.pictureit/resources/language/resource.language.hu_hu/: strings.po
visualization.pictureit/resources/language/resource.language.id_id/: strings.po
visualization.pictureit/resources/language/resource.language.is_is/: strings.po
visualization.pictureit/resources/language/resource.language.it_it/: strings.po
visualization.pictureit/resources/language/resource.language.ja_jp/: strings.po
visualization.pictureit/resources/language/resource.language.ko_kr/: strings.po
visualization.pictureit/resources/language/resource.language.lt_lt/: strings.po
visualization.pictureit/resources/language/resource.language.lv_lv/: strings.po
visualization.pictureit/resources/language/resource.language.mi/: strings.po
visualization.pictureit/resources/language/resource.language.mk_mk/: strings.po
visualization.pictureit/resources/language/resource.language.ms_my/: strings.po
visualization.pictureit/resources/language/resource.language.mt_mt/: strings.po
visualization.pictureit/resources/language/resource.language.my_mm/: strings.po
(+22 files in other folders)
